--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Quiz Bliblíco</title>
+    <title>Quiz Bíblico</title>
   </head>
   <body>
     <header class="header">
-      <h1>Quiz Bliblíco</h1>
+      <h1>Quiz Bíblico</h1>
     </header>
 
     <section class="perguntas">
       <div class="questoes_pergunt">
-        <div class="pergunt">00)<span id="q1"></span></div>
+        <div class="pergunt"><span id="q1"></span></div>
         <div class="questoesalt">A) <span id="q2">questão A</span></div>
         <div class="questoesalt">B) <span id="q3">questão B</span></div>
         <div class="questoesalt">C) <span id="q4">questão C</span></div>
