--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
     <section class="perguntas">
       <div class="questoes_pergunt">
         <div class="pergunt"><span id="q1"></span></div>
-        <div class="questoesalt">A) <span id="q2">questão A</span></div>
-        <div class="questoesalt">B) <span id="q3">questão B</span></div>
-        <div class="questoesalt">C) <span id="q4">questão C</span></div>
-        <div class="questoesalt">D) <span id="q5">questão D</span></div>
+        
+        <div class="container_perguntAlt">
+          <div class="questoesalt">A) <span id="q2">questão A</span></div>
+          <div class="questoesalt">B) <span id="q3">questão B</span></div>
+          <div class="questoesalt">C) <span id="q4">questão C</span></div>
+          <div class="questoesalt">D) <span id="q5">questão D</span></div>
+      
 
         <div class="cont_btn">
           <button class="btn_prox">PROXIMO</button>
         </div>
+      </div>
       </div>
     </section>
     <footer>Desenvolvido por @ismael</footer>
